kubernetes/apps/spark/sparknova/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sparknova
  namespace: spark
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    hajimari.io/enable: "true"
    hajimari.io/icon: mdi:ip-network
spec:
  ingressClassName: internal
  rules:
    - host: "sparknova.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master-svc
                port:
                  number: 80
  tls:
    - hosts:
        - "sparknova.${SECRET_DOMAIN}"
